--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,10 +2,22 @@ Package: snfR
 Type: Package
 Title: What the Package Does (Title Case)
 Version: 0.1.0
-Author: Who wrote it
-Maintainer: The package maintainer <yourself@somewhere.net>
+Author: Jay Gillenwater
+Maintainer: jhgille2@ncsu.edu
 Description: More about what it does (maybe more than one line)
     Use four spaces when indenting paragraphs within the Description.
-License: What license is it under?
+License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
+Suggests: 
+    knitr,
+    rmarkdown
+VignetteBuilder: knitr
+RoxygenNote: 7.1.1
+Imports: 
+    tidyr,
+    dplyr,
+    readxl,
+    stringr,
+    purrr,
+    janitor
